package com.limkhashing.testdrivendevelopment.ui.movie

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition
import androidx.test.espresso.contrib.RecyclerViewActions.scrollToPosition
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.internal.runner.junit4.AndroidJUnit4ClassRunner
import com.limkhashing.testdrivendevelopment.FragmentActivity
import com.limkhashing.testdrivendevelopment.R
import com.limkhashing.testdrivendevelopment.data.FakeMovieData
import com.limkhashing.testdrivendevelopment.ui.movie.MoviesListAdapter.MovieViewHolder
import com.limkhashing.testdrivendevelopment.ui.movie.actors.StarActorsFragment
import com.limkhashing.testdrivendevelopment.ui.movie.directors.DirectorsFragment
import com.limkhashing.testdrivendevelopment.util.EspressoIdlingResourceRule2
import org.hamcrest.CoreMatchers.not
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4ClassRunner::class)
class MovieListFragmentTest {

    // Test rule is a predefined set of test rule that will be happen before running each test
    // For example, can create test rule for Idling Resource so that we don't need to rewrite the code
    // to register in each test class
    @Rule
    @JvmField
    val activityRule = ActivityScenarioRule(FragmentActivity::class.java)

//    @Rule
//    @JvmField
//    val espressoIdlingResourceRule = EspressoIdlingResourceRule1()

    @Rule
    @JvmField
    val espressoIdlingResourceRule = EspressoIdlingResourceRule2()

    private val LIST_ITEM_IN_TEST = 4
    private val MOVIE_IN_TEST = FakeMovieData.movies[LIST_ITEM_IN_TEST]

//    @Before
//    fun registerIdlingResource() {
//        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
//    }
//
//    @After
//    fun unregisterIdlingResource() {
//        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.countingIdlingResource)
//    }

    /**
     * RecyclerView come into the view
     */
    @Test
    fun isListFragmentVisible_onAppLaunch() {
        onView(withId(R.id.recycler_view)).check(matches(isDisplayed()))
        onView(withId(R.id.progress_bar)).check(matches(not(isDisplayed())))
    }

    @Test
    fun selectListItem_isDetailFragmentVisible() {
        // Click list item #LIST_ITEM_IN_TEST
        onView(withId(R.id.recycler_view))
            .perform(actionOnItemAtPosition<MovieViewHolder>(LIST_ITEM_IN_TEST, click()))

        // Confirm nav to DetailFragment and display title
        onView(withId(R.id.movie_title)).check(matches(withText(MOVIE_IN_TEST.title)))
    }

    /**
     * Select List item, nav to MovieDetailFragment
     * correct movie in view?
     * pressBack
     */
    @Test
    fun backNavigation_toMovieListFragment() {
        onView(withId(R.id.recycler_view)).perform(
            scrollToPosition<MovieViewHolder>(
                LIST_ITEM_IN_TEST
            )
        )
        // Click list item #LIST_ITEM_IN_TEST
        // actionOnItemAtPosition should handle scrolling, but for some reason it doesnt handle
        onView(withId(R.id.recycler_view))
            .perform(actionOnItemAtPosition<MovieViewHolder>(LIST_ITEM_IN_TEST, click()))


        // Confirm nav to DetailFragment and display title
        onView(withId(R.id.movie_title)).check(matches(withText(MOVIE_IN_TEST.title)))

        pressBack()

        // Confirm MovieListFragment in view
        onView(withId(R.id.recycler_view)).check(matches(isDisplayed()))
    }

    /**
     * Select List item, nav to MovieDetailFragment
     * Select directors textview, nav to DirectorsFragment
     */
    @Test
    fun navDirectorsFragment_validateDirectorsList() {

        // Click list item #LIST_ITEM_IN_TEST
        onView(withId(R.id.recycler_view))
            .perform(actionOnItemAtPosition<MovieViewHolder>(LIST_ITEM_IN_TEST, click()))

        // Confirm nav to DetailFragment and display title
        onView(withId(R.id.movie_title)).check(matches(withText(MOVIE_IN_TEST.title)))

        // Nav to DirectorsFragment
        onView(withId(R.id.movie_directors)).perform(click())

        // Confirm correct directors are visible
        onView(withId(R.id.directors_text))
            .check(
                matches(
                    withText(
                        DirectorsFragment.stringBuilderForDirectors(MOVIE_IN_TEST.directors!!)
                    )
                )
            )
    }

    /**
     * Select List item, nav to MovieDetailFragment
     * Select star actors textview, nav to StarActorsFragment
     */
    @Test
    fun navStarActorsFragment_validateActorsList() {
        // Click list item #LIST_ITEM_IN_TEST
        onView(withId(R.id.recycler_view))
            .perform(actionOnItemAtPosition<MovieViewHolder>(LIST_ITEM_IN_TEST, click()))

        // Confirm nav to DetailFragment and display title
        onView(withId(R.id.movie_title)).check(matches(withText(MOVIE_IN_TEST.title)))

        // Nav to DirectorsFragment
        onView(withId(R.id.movie_star_actors)).perform(click())

        // Confirm correct directors are visible
        onView(withId(R.id.star_actors_text))
            .check(
                matches(
                    withText(
                        StarActorsFragment.stringBuilderForStarActors(MOVIE_IN_TEST.star_actors!!)
                    )
                )
            )
    }
}
